
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.x.rokhdelar.xassistant.FaultReportActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:text="@string/tv_title_fault_num"
        android:id="@+id/textView5"
        android:paddingBottom="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextNum"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_title_fault_contact"
        android:id="@+id/textView6"
        android:layout_below="@+id/editTextNum"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextContact"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:singleLine="true"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_title_fault_contact_phone"
        android:id="@+id/textView8"
        android:layout_below="@+id/editTextContact"
        android:layout_alignParentStart="true"
        android:hint="@string/tv_title_fault_contact_phone"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editTextContactPhone"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:singleLine="true" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tv_title_fault_info"
        android:id="@+id/textView9"
        android:layout_below="@+id/editTextContactPhone"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
    <Spinner
        android:id="@+id/spinnerInfo"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:spinnerMode="dropdown"
        android:layout_alignParentStart="true"
        android:layout_below="@id/textView9"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark"
        android:textColor="@color/bright_foreground_inverse_material_light"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewAdditionalInfo"
        android:id="@+id/textView10"
        android:layout_below="@+id/spinnerInfo"
        android:layout_alignParentStart="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:inputType="textMultiLine"
        android:id="@+id/editTextInfo"
        android:singleLine="false"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_above="@+id/buttonSend"
        android:layout_below="@+id/textView10" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fault_send"
        android:id="@+id/buttonSend"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/editTextInfo"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />
</RelativeLayout>
