<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.x.rokhdelar.xassistant.FaultResultFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/textViewFaultList"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/background_material_dark"/>
        <ListView
            android:id="@+id/listViewFaultList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:background="@color/background_material_dark"
            android:textColor="@color/bright_foreground_inverse_material_light"
            android:text="@string/textViewFaultDetail"/>
        <ListView
            android:id="@+id/listViewFaultDetail"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/buttonFaultResultRefresh"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_fault_result_refresh_button"/>
    </LinearLayout>

</LinearLayout>
